--- a/stylemainhome.css
+++ b/stylemainhome.css
@@ -50,22 +50,132 @@ body {
     color: #ffefcf;
 }
 
-.list-pict h2 {
+.lt h2 {
+    color: #864000;
+    padding: 10px;
+    margin-top: 48px;
     text-align: center;
+    position: relative;
+}
+
+.lt h2::before {
+    content: '';
+    display: block;
+    width: 520px;
+    height: 2px;
+    background: #864000;
+    position: absolute;
+    left: 3%;
+    top: 50%;
+}
+
+.lt h2::after {
+    content: '';
+    display: block;
+    width: 520px;
+    height: 2px;
+    background:  #864000 ;
+    position: absolute;
+    right: 3%;
+    top: 50%;
+}
+
+.list-pict {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     padding: 20px;
-    margin-top: 5px;
+    grid-gap: 40px;
+    margin: 20px 20px;
 }
 
-table {
-    border: none;
-    width: 900px;
-    justify-content: center;
-    align-items: center;
+.card {
+    background-color: #864000;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
 }
 
-table > td {
-    width: 20px;
-    height: 20px;
+.card-image {
+    position: relative;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+}
+
+.card-image img {
+    width: 100%;
+    height: 250px;
+    display: block;
+    border-radius: 20px 20px 0 0;
+}
+
+.card-image:after {
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 20px 20px 0 0;
+    opacity: 0.7;
+}
+
+.details {
+    padding: 10px 10px;
+}
+
+.details > h3 {
+    color: #ffefcf;
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
+}
+
+.details > p {
+    color: #ffefcf;
+    font-size: 15px;
+    line-height: 30px;
+    font-weight: 400;
+    text-align: center;
+}
+
+@media (max-width: 1320px) {
+    .lt h2::before {
+        width: 400px;
+        height: 2px;
+        left: 3%;
+    }
+    
+    .lt h2::after {
+        width: 400px;
+        height: 2px;
+        right: 3%;
+    }
+}
+
+@media (max-width: 1100px) {
+    .lt h2::before {
+        width: 320px;
+        height: 2px;
+        left: 3%;
+    }
+    
+    .lt h2::after {
+        width: 320px;
+        height: 2px;
+        right: 3%;
+    }
+}
+
+@media (max-width: 880px) {
+    .lt h2::before {
+        width: 220px;
+        height: 2px;
+        left: 3%;
+    }
+    
+    .lt h2::after {
+        width: 220px;
+        height: 2px;
+        right: 3%;
+    }
 }
 
 @media (max-width: 768px) {
