--- a/stylemainhome.css
+++ b/stylemainhome.css
@@ -19,6 +19,7 @@ body {
     grid-template-columns: 4fr 3fr;
     grid-template-rows: auto repeat(3, 15rem) auto;
     gap: 2rem;
+    margin-bottom: 5%;
 
     /* NOTE This creates the fade in/out anumation */
     opacity: 0;
