--- a/stylemainhome.css
+++ b/stylemainhome.css
@@ -1,3 +1,5 @@
+/*Ada beberapa yang aku revisi ya cek komennya aja, Untuk cardnya masih belum responsive ya, masih aku cari masalahnya hehe:)*/
+
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap');
 
 * {
@@ -19,7 +21,7 @@ body {
     grid-template-columns: 4fr 3fr;
     grid-template-rows: auto repeat(3, 15rem) auto;
     gap: 2rem;
-    margin-bottom: 5%;
+    margin-bottom: 5%; /*Tambahin Ini*/
 
     /* NOTE This creates the fade in/out anumation */
     opacity: 0;
