--- a/stylemainhome.css
+++ b/stylemainhome.css
@@ -168,62 +168,117 @@ label{
 }
 
 .list-pict {
-    display: grid;
     grid-column: span 3; /*Tambahin ini*/
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    padding: 20px;
-    grid-gap: 40px;
-    margin: 20px 20px;
+    grid-row: span 3;
+    position: relative;
+    padding: 50px 40px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
+.list-pict.style {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    background: #ffefcf;
+}
+
+.list-pict .col {
+    flex-basis: 0;
+    flex-grow: 1;
+    flex: 0 0 33.333%;
+    max-width: 33.333%;
+    padding: 0 30px;
+}
+
+.list-pict .col-2 {
+    flex-basis: 0;
+    flex-grow: 1;
+    flex: 0 0 33.333%;
+    max-width: 33.333%;
+    padding: 0 30px;
+    margin-top: 50px;
+} 
+
 .card {
-    width: 92%; /*Bisa Tambahin ini tapi masih belum fix ya*/
-    max-height: 100%;
+    position: relative;
+    color: #ffefcf;
     background-color: #864000;
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+    border-radius: 8px;
 }
 
 .card-image {
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-}
-
-.card-image img {
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
     width: 100%;
     height: 200px;
-    display: block;
-    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+    object-position: center;
 }
 
-.card-image:after {
-    content: '';
-    height: 100%;
-    width: 100%;
+.card-title {
+    position: relative;
+    padding: 20px 25px 5px;
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.card-title:before {
+    content: "";
     position: absolute;
+    left: 25px;
     top: 0;
-    left: 0;
-    border-radius: 20px 20px 0 0;
-    opacity: 0.7;
+    width: 50px;
+    height: 50px;
+    margin-top: -25px;
+    background-color: #864000;
+    border-radius: 50%;
+    transition: transform 600ms cubic-bezier(0.86, 0, 0.07, 1), opacity 400ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.details {
-    padding: 10px 10px;
+.card:hover .card-title:before {
+    opacity: 0.8;
+    transform: scale(0.6);
 }
 
-.details > h3 {
-    color: #ffefcf;
-    font-weight: 600;
-    font-size: 18px;
-    text-align: center;
+.card-description {
+    padding: 5px 25px 20px;
+}
+  
+.preview-article {
+    grid-column: span 3;
+    justify-content: center;
+    position: relative;
+    max-width: 100%;
+    background-color: var(--clr-White);
+    border-radius: 10px;
+    box-shadow: 0 0 60px var(--clr-shadow-200);
+    margin: 10px 40px;
 }
 
-.details > p {
-    color: #ffefcf;
-    font-size: 15px;
-    line-height: 30px;
-    font-weight: 400;
-    text-align: center;
+.picture {
+    width: 100%;
+    height: 15rem;
+    background-image: url(img/sample.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    border-radius: 10px 10px 0 0;
+}
+
+.article-section {
+    padding: 2.25rem 1.5rem 1rem 1.5rem;
+}
+
+.article-section h2 {
+    font-size: 1.2rem;
+    margin-top: 0;
+}
+
+.article-section p {
+    color: var(--clr-DesaturatedDarkBlue);
+    font-size: 1.1rem;
+    line-height: 1.6;
+    margin-bottom: 0;
 }
 
 @media (max-width: 1320px) {
@@ -238,9 +293,6 @@ label{
         height: 2px;
         right: 3%;
     }
-    .card {
-        grid-column: span 3;
-    }
 }
 
 @media (max-width: 1100px) {
@@ -254,6 +306,28 @@ label{
         width: 320px;
         height: 2px;
         right: 3%;
+    }
+}
+
+@media (min-width: 991px) {
+    .preview-article {
+        display: flex;
+        max-width: 55rem;
+    }
+
+    .picture {
+        width: 890px;
+        height: auto;
+        background-position: left top;
+        border-radius: 10px 0 0 10px;
+    }
+
+    .article-section {
+        padding: 2.25rem 2.2rem 1rem 2.2rem;
+    }
+
+    .article-section h2 {
+        font-size: 1.6rem;
     }
 }
 
