--- a/stylemainhome.css
+++ b/stylemainhome.css
@@ -2,6 +2,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap');
 
+:root {
+    --clr-White              : hsl(0, 0%, 100%);
+    --clr-VeryDarkGrayishBlue: hsl(217, 19%, 35%);
+    --clr-DesaturatedDarkBlue: hsl(214, 17%, 51%);
+    --clr-GrayishBlue        : hsl(212, 23%, 69%);
+    --clr-LightGrayishBlue   : hsl(210, 46%, 95%);
+    --clr-shadow-200         : hsla(0, 0%, 0%, 0.125);
+}
+
 * {
     padding: 0;
     margin: 0;
