--- a/stylenavbar.css
+++ b/stylenavbar.css
@@ -79,7 +79,7 @@ header {
 .btn {
     display: inline-block;
     padding: 0.5rem 1.3rem;
-    font-size: 0.8rem;
+    font-size: 15px;
     border: 2px solid #ffefcf;
     border-radius: 2rem;
     line-height: 1;
