--- a/search-page.css
+++ b/search-page.css
@@ -87,6 +87,13 @@ label{
     font-size: 10pt;
 }
 
+.search-title {
+    text-align: center;
+    margin-top: 100px;
+    font-size: 35px;
+    color: #ff7a00;
+}
+
 ::selection {
     color: #ffefcf;
     background-color: #664AFF;
