--- a/stylemainhome.css
+++ b/stylemainhome.css
@@ -260,18 +260,18 @@ label{
 }
 
 .preview-article.one {
-    margin-left: 40px;
+    margin-left: 4%; /*Ini ubah 28-6-21*/
     margin-right: 31.5%;
 }
 
 .preview-article.second {
-    margin-right: 40px;
+    margin-right: 4%; /*Ini ubah 28-6-21*/
     margin-left: 31.5%;
 }
 
 .one .picture  {
     width: 100%;
-    height: 17rem;
+    height: 100%; /*Ini ubah 28-6-21*/
     background-image: url(img/sample.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -281,7 +281,7 @@ label{
 
 .second .picture.res {
     width: 100%;
-    height: 17rem;
+    height: 100%; /*Ini ubah 28-6-21*/
     background-image: url(img/sample.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -348,12 +348,12 @@ label{
 @media (min-width: 991px) {
     .preview-article {
         display: flex;
-        max-width: 55rem;
+        max-width: 66%; /*Ini ubah 28-6-21*/
     }
 
     .picture {
-        width: 890px;
-        height: auto;
+        width: 100%;/*Ini ubah 28-6-21*/
+        height: 100%; /*Ini ubah 28-6-21*/
         background-position: left top;
         border-radius: 10px 0 0 10px;
     }
@@ -381,6 +381,7 @@ label{
     
     .one .picture {
         border-radius: 10px 10px 0 0px;
+        height: 17rem; /*Ini ubah 28-6-21*/
     }
 
     .second .picture.std {
